* [UI/Style] Fixed the extra padding on buttons in Firefox.
* [UI/Style] Dropdowns will now display as platform native controls in Firefox and Opera.

--- a/features/cerberusweb.core/resources/css/cerberus.css
+++ b/features/cerberusweb.core/resources/css/cerberus.css
@@ -76,8 +76,12 @@ abbr {
 	border-bottom:dotted 1px rgb(175,175,175);
 }
 
-select, textarea {
+textarea {
 	border:1px solid rgb(150,150,150);
+}
+
+select {
+	-moz-appearance:menulist;
 }
 
 input[type=text], input[type=password] {
@@ -85,7 +89,7 @@ input[type=text], input[type=password] {
 	padding:2px;
 }
 
-input[type=text]:focus, input[type=password]:focus, select:focus, textarea:focus {
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
 	border:1px solid rgb(121,183,231);
 }
 input[type=text]:focus, input[type=password]:focus {
@@ -168,6 +172,11 @@ pre.emailbody {
 	margin:0px;
 }
 
+button::-moz-focus-inner { 
+    border: 0;
+    padding: 0;
+}
+
 button {
 	background-color:rgb(230,230,230);
 	background: linear-gradient(top, rgb(240,240,240), rgb(210,210,210));
@@ -185,6 +194,9 @@ button {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
+	
+	padding:3px 5px;
+	margin:0px;
 }
 
 button:hover {
@@ -197,12 +209,6 @@ button:hover {
 	cursor:pointer;
 	
 	border:1px solid rgb(130,165,226);
-	
-	margin-right:1px;
-	vertical-align:middle;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
 }
 
 button.green {
@@ -252,8 +258,6 @@ button.red:hover {
 }
 
 button span {
-	line-height:16px;
-	vertical-align:top;
 }
 
 button.split-left {
@@ -266,8 +270,6 @@ button.split-left {
 
 button.split-right {
 	margin-left:0px;
-	padding-left:3px;
-	padding-right:3px;
 	-moz-border-radius: 0px 5px 5px 0px;
 	-webkit-border-radius: 0px 5px 5px 0px;
 	border-radius: 0px 5px 5px 0px;
@@ -882,7 +884,7 @@ DIV.cerb-menu .cerb-popupmenu {
 	background-repeat:no-repeat;
 	background-position:top left;
 	display:inline-block;
-	vertical-align:middle;
+	vertical-align:top;
 }
 button span.cerb-sprite { display:inline-block; }
 
@@ -934,7 +936,7 @@ button span.cerb-sprite { display:inline-block; }
 	background-repeat:no-repeat;
 	background-position:top left;
 	display:inline-block;
-	vertical-align:middle;
+	vertical-align:top;
 }
 button span.cerb-sprite2 { display:inline-block; }
 
